# spotmicro

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  imu_test.py  pair_ps4.sh  pyproject.toml  requirements.txt  reset_servos.py  start.sh
src/: app.py  auto_calibrate.py  balance.py  calibration.json  controller_config.py  controller_watchdog.py  dash_app.py  gait.py  ik_interface.py  microspot_app.py  ps4_controller.py  stability_monitor.py  test_3d_viz.py  test_imu_direct.py  trajectory.py  tuning.json  xbox_controller.py
src/components/: calibration.py  control_page.py  imu_page.py  robot_3d.py  robot_viz.py  servo_page.py  settings_page.py  tuning_page.py
src/tests/: test_all_legs.py  test_balance_walk.py  test_gait_live.py  test_single_step.py  test_walk.py
src/tools/: autotune_all.py  autotune_knee.py  calibrate_180.py  hip_test.py
