[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microspot"
version = "0.1.0"
description = "SpotMicro quadruped robot control system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["robotics", "quadruped", "spot", "raspberry-pi", "servo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
hardware = [
    "adafruit-circuitpython-pca9685>=3.4.0",
    "adafruit-circuitpython-servokit>=1.3.0",
    "adafruit-circuitpython-mpu6050>=1.2.0",
    "pyPS4Controller>=1.3.0",
]
dash = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.18.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]
all = ["microspot[hardware,dash,dev]"]

[project.urls]
Homepage = "https://github.com/maerestijnde/spotmicro"
Repository = "https://github.com/maerestijnde/spotmicro"
Issues = "https://github.com/maerestijnde/spotmicro/issues"

[tool.black]
line-length = 127
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
skip_gitignore = true

[tool.flake8]
max-line-length = 127
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
